--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="about.html">About Me</a></li>
+							<li><a href="resume.html">Resume</a></li>
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
