adding city of blue

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="assets/CityOfBlue.pdf"></a> City Planning Project</h2>
+									</header>
+									<a href="assets/CityOfBlue.pdf"class="image fit"><img src="images/cob.jpg" alt="" /></a>
+									<p>A city-planning mapping project in the hypothetical 'City of Blue,' which includes population, traffic, and zoning features, among others. </p>
+									<ul class="actions special">
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="images/3dmovie.mp4"> 3D Blender Map</a></h2>
 									</header>
 									<a href="images/3dmovie.mp4" class="image fit"><img src="images/render1.png" alt="" /></a>
