--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li class="active"><a href="about.html">About Me</a></li>
+							<li><a href="resume.html">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/4matthew-gonzalez?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B24rYl59LT%2FiiKpWEPgZOYg%3D%3D" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
