--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
 								The prompt of this project entails creating various city planning maps for a fictional 'City of Blue.' 
 								The final <a href="assets/CityOfBlue.pdf" style="color:cadetblue">Development Plan</a> includes reports and maps of included features of the city.
 							</p>
-							<p>Tools used: ArcGIS, </p>
+							<p>Tools used: ArcGIS </p>
 						</section>
 
 						<!-- Post -->
