--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 										<h2><a href="images/3dmovie.mp4"> 3D Blender Map</a></h2>
 									</header>
 									<a href="images/3dmovie.mp4" class="image fit"><img src="images/render1.png" alt="" /></a>
-									<p>An animated map using Blender and GIS.</p>
+									<p>An animated map using Blender and GIS. 
+										Video, image, or GIF files can be created from this map.</p>
 									<ul class="actions special">
 									</ul>
 								</article>
