--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
       </ul>
     </div>
     <div class="skills-prog">
-      <h3><i class="fas fa-code"></i>Professional Skills</h3>
+      <h3><i class="fas fa-user-tie"></i>Professional Skills</h3>
       <ul>
         <li data-percent="95"><span>ESRI Products</span>
           <div class="skills-bar">
@@ -100,7 +100,7 @@
       </ul>
     </div>
     <div class="skills-soft">
-      <h3><i class="fas fa-bezier-curve"></i>GIS Experience</h3>
+      <h3><i class="fas fa-map"></i>GIS Experience</h3>
       <ul>
         <li data-percent="90">
           <svg viewbox="0 0 100 100">
@@ -131,11 +131,11 @@
     <div class="interests">
       <h3><i class="fas fa-star"></i>Interests</h3>
       <div class="interests-items">
-        <div class="art"><i class="fas fa-palette"></i><span>Art</span></div>
-        <div class="art"><i class="fas fa-book"></i><span>Books</span></div>
-        <div class="movies"><i class="fas fa-film"></i><span>Movies</span></div>
-        <div class="music"><i class="fas fa-headphones"></i><span>Music</span></div>
-        <div class="games"><i class="fas fa-gamepad"></i><span>Games</span></div>
+        <div class="art"><i class="fas fa-palette"></i><span>Painting</span></div>
+        <div class="art"><i class="fas fa-vial"></i><span>Science</span></div>
+        <div class="movies"><i class="fas fa-cube"></i><span>3D Rendering</span></div>
+        <div class="music"><i class="fas fa-headphones"></i><span>Music Production</span></div>
+        <div class="games"><i class="fas fa-gamepad"></i><span>Game Design</span></div>
       </div>
     </div>
   </div>
