added vacation app

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 									</ul>
 								</article>
 								<article>
+									<iframe src="https://msjc.maps.arcgis.com/apps/instant/attachmentviewer/index.html?appid=b6986c80468d47889a208c7797ca014d" width="400" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
+								</article>
+								<article>
 									<header>
 										<h2><a href="images/3dmovie.mp4"> 3D Blender Map</a></h2>
 									</header>
