updating summer vacation app

--- a/index.html
+++ b/index.html
@@ -73,15 +73,19 @@
 									</ul>
 								</article>
 								<article>
-									<iframe src="https://msjc.maps.arcgis.com/apps/instant/attachmentviewer/index.html?appid=b6986c80468d47889a208c7797ca014d" width="400" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
+									<header>
+										<h2><a href="https://arcg.is/1Gmq1C"></a> Summer Vacation 2021</h2>
+									</header>
+									<a href="https://arcg.is/1Gmq1C"class="image fit"><img src="images/SV21.JPEG" alt="" /></a>
+									<p>A small app documenting a family trip I went on in 2021 with descriptions of places we visited and photos taken.</p>
+									<ul class="actions special">
+									</ul>
 								</article>
-								<article>
 									<header>
 										<h2><a href="images/3dmovie.mp4"> 3D Blender Map</a></h2>
 									</header>
-									<a href="images/3dmovie.mp4" class="image fit"><img src="images/render1.png" alt="" /></a>
-									<p>An animated map using Blender and GIS. 
-										Video, image, or GIF files can be created from this map.</p>
+									<a href="images/3dmovie.mp4" class="image fit"><img src="images/render1.png"  alt="" /></a>
+									<p>An animated map using Blender and GIS. Video, image, or GIF files can be created from this map.</p>
 									<ul class="actions special">
 									</ul>
 								</article>
