--- a/about.html
+++ b/about.html
@@ -41,17 +41,16 @@
 									<h2 > Hello!</a></h2>
 								</header>
 								<body>
-									My name is Matthew and I am an aspiring GIS analyst.
-									I first learned about GIS through my Environmental Systems - Earth Science B.S. program at UC San Diego.
-									Since then, I've continued learning about mapping and cartography, as I am currently working towards a certificate degree in GIS at Mt. San Jacinto college.
-									I love GIS because it blends the creativity and freedom of art with the rigor of science.
-									I hope to combine my knowledge and passion for Earth science and the environment with map making, statistical analysis, computer science, and everything that makes GIS a promising career.
-									Besides mapping, some other interests I have include making music, cooking, painting, making <a href="assets/House_Render.mp4" style="color:cadetblue"> 3D art</a>, and being outdoors.
-									I care about conservation efforts and working to make the world a better, more sustainable place.
-									As an avid learner, I try to include all of my interests in my maps.
-									Currently, I am seeking an entry position or internship in the field.
-									For any inquiry, don't hesitate to send me an <a href = "mailto: 4matthewgonzalez@gmail.com" style="color:cadetblue">email</a>.
-									Until next time, take care and keep mapping!
+									Hi, I’m Matthew — an aspiring Environmental Scientist with a strong interest in environmental analysis and geologic fieldwork.
+									I’m passionate about understanding Earth’s systems and using scientific tools to analyze natural patterns, assess environmental impacts, and contribute to sustainable solutions.
+									I earned my B.S. in Environmental Systems – Earth Science from UC San Diego, where I was introduced to GIS as a powerful tool for visualizing and interpreting environmental data.
+									Since then, I’ve continued developing my skills in environmental data analysis, including work in Python, cartography, and field work, and I completed a GIS Certificate at Mt. San Jacinto College.
+									My focus is on applying environmental science in practical, impactful ways — whether it’s through field data collection, spatial modeling, or environmental reporting.
+									I’m particularly motivated by conservation work and the need to address environmental challenges at both local and global scales.
+									Outside of science, I enjoy making music, cooking, painting, being outdoors, and creating 3D art.
+									I try to bring the same curiosity and creativity from those hobbies into my scientific work.
+									I’m currently seeking an entry-level role where I can apply my skills in environmental science, data analysis, and problem-solving to real-world environmental challenges.
+									Feel free to reach out — I’d love to <a href = "mailto: 4matthewgonzalez@gmail.com" style="color:cadetblue">connect</a>.
 								</body>
 								<ul class="actions special">
 								</ul>
