--- a/resume.html
+++ b/resume.html
@@ -21,20 +21,19 @@
       </div>
       <div class="info">
         <h1 class="name">Matthew Gonzalez</h1>
-        <h2 class="job">GIS Technician</h2>
+        <h2 class="job">Environmental Analyst</h2>
       </div>
     </div>
     <div class="about">
       <h3>About Me</h3>
-      I am aspiring GIS technician and current student seeking a civil career opportunity in the field of GIS. 
+      I am aspiring Environmental Analyst seeking a civil career opportunity in the field of conservation and sustainability. 
       I am a self motivated team player, quick learner, and environmental advocate.
     </div>
     <div class="contact">
       <h3>Contact Me</h3>
       <div class="address"><a href="https://goo.gl/maps/wtUEkkY8Vf3RF1xe9"><i class="fas fa-map-marker"></i><span>Menifee, California</span></a></div>
-      <div class="call"><a href="tel:951-473-9897"><i class="fas fa-phone"></i><span>951-473-9897</span></a></div>
-      <div class="email"><a href="mailto:4matthewgonzalez@gmail.com"><i class="fas fa-envelope"></i><span>My Email</span></a></div>
-      <div class="website"><a href="https://4mmgonzal.github.io/" target="_blank"> <i class="fas fa-home"></i><span>My Website</span></a></div>
+      <div class="email"><a href="mailto:4matthewgonzalez@gmail.com"><i class="fas fa-envelope"></i><span>Email Me</span></a></div>
+      <div class="website"><a href="https://4mmgonzal.github.io/" target="_blank"> <i class="fas fa-home"></i><span>My Portfolio</span></a></div>
     </div>
     <div class="follow">
       <h3>Follow Me</h3>
@@ -48,16 +47,17 @@
     <div class="work">
       <h3><i class="fa fa-briefcase"></i>Experience</h3>
       <ul>
-        <li><span>Intern - Outreach<br>Urban Forestry</span><small>Tree San Diego</small><small>Aug 2020 - Oct 2021</small></li>
-        <li><span>Shift Lead</span><small>UCSD HDH</small><small>Sep 2016 - Dec 2019</small></li>
-        <li><span>Associate</span><small>Panera Bread</small><small>Aug 2021 - Present</small></li>
+        <li><span>Board Member</span><small>Green Coalition of the San Jacinto Valley</small><small>Mar 2025 - Present</small></li>
+        <li><span>Outings Leader</span><small>Sierra Club</small><small>Apr 2025 - Present</small></li>
+        <li><span>Intern</span><small>Tree San Diego</small><small>Aug 2020 - Oct 2021</small></li>
+        
       </ul>
     </div>
     <div class="edu">
       <h3><i class="fa fa-graduation-cap"></i>Education</h3>
       <ul>
         <li><span>Bachelor of Science<br>Environmental Systems - Earth Science</span><small>UC San Diego</small><small>2016-2021</small></li>
-        <li><span>Certificate Degree</span><small>Mt. San Jacinto College</small><small>2021-Present</small></li>
+        <li><span>GIS Certificate Degree</span><small>Mt. San Jacinto College</small><small>2021-2022</small></li>
         <li><span>High School</span><small>Temecula Valley High School</small><small>2012-2016</small></li>
       </ul>
     </div>
@@ -102,7 +102,7 @@
       </ul>
     </div>
     <div class="skills-soft">
-      <h3><i class="fas fa-map"></i>GIS Experience</h3>
+      <h3><i class="fas fa-map"></i>Academic Experience</h3>
       <ul>
         <li data-percent="90">
           <svg viewbox="0 0 100 100">
@@ -135,9 +135,10 @@
       <div class="interests-items">
         <div class="art"><i class="fas fa-palette"></i><span>Painting</span></div>
         <div class="art"><i class="fas fa-vial"></i><span>Science</span></div>
-        <div class="movies"><i class="fas fa-cube"></i><span>3D Rendering</span></div>
+        <div class="movies"><i class="fas fa-cube"></i><span>Rendering</span></div>
         <div class="music"><i class="fas fa-headphones"></i><span>Music Production</span></div>
         <div class="games"><i class="fas fa-gamepad"></i><span>Game Design</span></div>
+        <div class="hike"><i class="fas fa-map-signs"></i><span>Hiking</span></div>
       </div>
     </div>
   </div>
